--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.8.1",
     "hook-form": "^0.0.1",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
